icon next to about

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -519,7 +519,7 @@ function addResultRow(id, text) {
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 function addImageRow(id, text) {
-  $("#"+id).append("<div \" style=\"padding-top: 5px; width: 400px; padding-bottom: 0;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
+  $("#"+id).append("<div \" style=\"padding-top: 5px; width: 330px; padding-bottom: 0;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 {% if num_matches < 9 %}
@@ -564,7 +564,7 @@ function addImageRow(id, text) {
    <div id="sideOverlay" class="sideOverlay" style="overflow: auto;">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a style="pointer-events: none;"> Welcome, {{netid}}</a>
-    <a href="https://classmaps.herokuapp.com/about" target="_blank">About</a>
+    <a href="https://classmaps.herokuapp.com/about" target="_blank"><img src="{% static 'classes/images/info.png'%}" class="center" style="width:16px”>About</a>
     <a onclick="openHelp()">Help</a>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOX9jOp3gI_k9EWZPRFgFlG76HYGUtcY1nLl1pCTybvus0nQ/viewform?usp=sf_link" target="_blank">Feedback</a>
     <a href="https://classmaps.herokuapp.com/about/#team" target="_blank">Contact</a>
