--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -564,8 +564,7 @@ function addImageRow(id, text) {
    <div id="sideOverlay" class="sideOverlay" style="overflow: auto;">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a style="pointer-events: none;"> Welcome, {{netid}}</a>
-    <a href="https://classmaps.herokuapp.com/about" target="_blank">
-      <img src="{% static 'classes/images/info.png'%}" class="center" style="width:16px;”>About</a>
+    <a href="https://classmaps.herokuapp.com/about" target="_blank"><i class="fa fa-info"></i>About</a>
     <a onclick="openHelp()">Help</a>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOX9jOp3gI_k9EWZPRFgFlG76HYGUtcY1nLl1pCTybvus0nQ/viewform?usp=sf_link" target="_blank">Feedback</a>
     <a href="https://classmaps.herokuapp.com/about/#team" target="_blank">Contact</a>
