--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -564,11 +564,11 @@ function addImageRow(id, text) {
    <div id="sideOverlay" class="sideOverlay" style="overflow: auto;">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a style="pointer-events: none;"> Welcome, {{netid}}</a>
-    <a href="https://classmaps.herokuapp.com/about" target="_blank"><i class="fa fa-info"></i> &nbspAbout</a>
-    <a onclick="openHelp()"><i class="fa fa-question"></i> &nbspHelp</a>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOX9jOp3gI_k9EWZPRFgFlG76HYGUtcY1nLl1pCTybvus0nQ/viewform?usp=sf_link" target="_blank"><i class="fa fa-comments"></i> &nbspFeedback</a>
+    <a href="https://classmaps.herokuapp.com/about" target="_blank"><i class="fa fa-info"></i> &nbsp&nbspAbout</a>
+    <a onclick="openHelp()"><i class="fa fa-question"></i> &nbsp&nbspHelp</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOX9jOp3gI_k9EWZPRFgFlG76HYGUtcY1nLl1pCTybvus0nQ/viewform?usp=sf_link" target="_blank"><i class="fa fa-comment"></i> &nbspFeedback</a>
     <a href="https://classmaps.herokuapp.com/about/#team" target="_blank"><i class="fa fa-address-card"></i> &nbspContact</a>
-    <a href="https://classmaps.herokuapp.com/accounts/logout"><i class="fa fa-sign-out"></i> &nbspSign Out</a>
+    <a href="https://classmaps.herokuapp.com/accounts/logout"><i class="fa fa-sign-out"></i> &nbsp&nbspSign Out</a>
 
       <footer style="font-size: 12px; padding: 10px; position: absolute; bottom: 0; right: 0;">
         <p>To add the site to your phone's homescreen, open the <a style="padding: 0; font-size: 12px; color: #00aaee;" href="/">homepage</a></p>
