--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -814,7 +814,7 @@ map.on('drag', function() {
     map.zoomControl.setPosition('bottomright');
 
 
-L.easyadfoijpdsfoijapsdofjapsdiofjaposdjfButton('<img src="{% static 'classes/images/currentloc.png' %}" style="width:16px">', function (btn, map) {
+L.easyButton('<img src="{% static 'classes/images/currentloc.png' %}" style="width:16px">', function (btn, map) {
 
     map.locate({
         setView: true,
