hope this works

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -154,7 +154,10 @@
       z-index: 10;
       cursor: pointer;
       transition: 0.5s;
-      padding: 20%;
+      padding-left: 20%;
+      padding-right: 20%;
+      padding-top: 10%;
+      padding-bottom: 10%;
     }
     /* Start sidebar css */
     .sideOverlay {
@@ -581,8 +584,9 @@ function addImageRow(id, text) {
 <!--  Code for help overlay  -->
    <div id="helpOverlay" class="helpOverlay" style="overflow: auto;" onclick="closeHelp()">
      <h3>Help</h3>
-     <a href="javascript:void(0)" class="closebtn" onclick="closeHelp()">&times;CLOSE</a>
-     This is the help overlay. (This part has yet to be completed, sorry.)
+<!--      <a href="javascript:void(0)" class="closebtn" onclick="closeHelp()">&times;CLOSE</a>
+     This is the help overlay. (This part has yet to be completed, sorry.) -->
+     <img src="{% static 'classes/images/helpoverlay.png'%}" style="width:60%;">
    </div>
 <!-- sidenav script  -->
 <script>
