--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -154,10 +154,7 @@
       z-index: 10;
       cursor: pointer;
       transition: 0.5s;
-      padding-left: 20%;
-      padding-right: 20%;
-      padding-top: 10%;
-      padding-bottom: 10%;
+      text-align: center
     }
     /* Start sidebar css */
     .sideOverlay {
@@ -586,7 +583,7 @@ function addImageRow(id, text) {
      <h3>Help</h3>
 <!--      <a href="javascript:void(0)" class="closebtn" onclick="closeHelp()">&times;CLOSE</a>
      This is the help overlay. (This part has yet to be completed, sorry.) -->
-     <img src="{% static 'classes/images/helpoverlay.png'%}" style="width:60%;">
+     <img src="{% static 'classes/images/helpoverlay.png'%}" style="width:90%;">
    </div>
 <!-- sidenav script  -->
 <script>
