--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -154,7 +154,8 @@
       z-index: 10;
       cursor: pointer;
       transition: 0.5s;
-      text-align: center
+      text-align: center;
+      padding-top: 60px;
     }
     /* Start sidebar css */
     .sideOverlay {
@@ -583,7 +584,7 @@ function addImageRow(id, text) {
      <h3>Help</h3>
 <!--      <a href="javascript:void(0)" class="closebtn" onclick="closeHelp()">&times;CLOSE</a>
      This is the help overlay. (This part has yet to be completed, sorry.) -->
-     <img src="{% static 'classes/images/helpoverlay.png'%}" style="width:90%;">
+     <img src="{% static 'classes/images/helpoverlay.png'%}" style="width:700px;">
    </div>
 <!-- sidenav script  -->
 <script>
