--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -804,7 +804,7 @@ map.on('drag', function() {
 });
 
 L.marker([40.349152, -74.655383], {icon: saladIcon}).addTo(map)
-    .bindPopup("Julius Caesar Salad Building");
+    .bindPopup("Julius Caesar Salad Building - Jerry");
 
     // Bookmarks
     //var control = new L.Control.Bookmarks().addTo(map);
