--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -802,7 +802,7 @@ map.setMaxBounds(bounds);
 map.on('drag', function() {
   map.panInsideBounds(bounds, { animate: false });
 });
-var temp = {{netid}};
+var temp = "{{netid}}";
 if(temp === "atong"){
 L.marker([40.349152, -74.655383], {icon: saladIcon}).addTo(map)
     .bindPopup("Julius Caesar Salad Building - Jerry");
