make it for jerry only

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -803,7 +803,7 @@ map.on('drag', function() {
   map.panInsideBounds(bounds, { animate: false });
 });
 var temp = "{{netid}}";
-if(temp === "atong"){
+if(temp === "jywei"){
 L.marker([40.349152, -74.655383], {icon: saladIcon}).addTo(map)
     .bindPopup("Julius Caesar Salad Building - Jerry");
 }
