--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -532,7 +532,7 @@ function addImageRow(id, text) {
 {% if buildings or classes %}
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
-  addResultRow("buildings", "{{num_matches}} matches for:<br>\""+truncate("{{q}}",20)+"\"<br>{{d}} {{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
+  addResultRow("buildings", "{{num_matches}} matches for:<br>\""+truncate("{{q}}",20)+"\"<br>{{d}} {{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;&nbspCLOSE</a>");
 {% elif num_matches == 0 %}
 //   if(document.getElementById("search").value != null){
 //   }
