--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -532,14 +532,14 @@ function addImageRow(id, text) {
 {% if buildings or classes %}
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
-  addResultRow("buildings", "{{num_matches}} matches for:<br>\""+truncate("{{q}}",20)+"\"<br>{{d}} {{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;&nbspCLOSE</a>");
+  addResultRow("buildings", "{{num_matches}} matches for:<br>\""+truncate("{{q}}",19)+"\"<br>{{d}} {{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;&nbspCLOSE</a>");
 {% elif num_matches == 0 %}
 //   if(document.getElementById("search").value != null){
 //   }
   console.log("no results");
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
-  addResultRow("buildings", "No Matches for:<br>\""+truncate("{{q}}",20)+"\"<br>{{d}} {{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
+  addResultRow("buildings", "No matches for:<br>\""+truncate("{{q}}",19)+"\"<br>{{d}} {{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
   addImageRow("buildings", "<img src=\"{% static 'classes/images/calvinandhobbes.png'%}\" alt=\"NotFound\" class=\"center\" style=\"width:100%;\">");
 {% endif %}
 
@@ -558,7 +558,7 @@ function addImageRow(id, text) {
 
 {% if classes %}
     {% for c in classes %}
-      var formatted = "{{c}}".split("/")[0]+" {{c.section}}<br>{{c.day}} {{c.time}} <br>"+truncate("{{c.title}}", 20);
+      var formatted = "{{c}}".split("/")[0]+" {{c.section}}<br>{{c.day}} {{c.time}} <br>"+truncate("{{c.title}}", 19);
       addCourseRow("buildings", "<a href=\"/course/{{c.pk}}\" style=\"color: black;\">"+formatted);
     {% endfor %}
 {% endif %}
