--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -540,7 +540,11 @@ function addImageRow(id, text) {
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
   addResultRow("buildings", "No matches for:<br>\""+truncate("{{q}}",19)+"\"<br>{{d}} {{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
+  var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
+  console.log(width);
+  if(width > 720){
   addImageRow("buildings", "<img src=\"{% static 'classes/images/calvinandhobbes.png'%}\" alt=\"NotFound\" class=\"center\" style=\"width:100%;\">");
+  }
 {% endif %}
 
 {% if buildings %}
