--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -425,8 +425,8 @@ function convertBool(b) {
    </div>
 
     <div style="float:left; padding-right: 10px;">
-      <button type="submit" style="display:none">
-        <i class="fa fa-search"></i>Search ClassMaps
+      <button type="submit" style="display:block z-index:0">
+<!--         <i class="fa fa-search"></i>Search ClassMaps -->
       </button>
     </div>
   </form>
