--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -424,10 +424,9 @@ function convertBool(b) {
     <input type="text" style="color: white; cursor: pointer; font-size:15px;" placeholder="&times;" readonly>
    </div>
 
-    <div style="float:left; padding-right: 10px;">
-      <button type="submit" style="display:block z-index:0">
-<!--         <i class="fa fa-search"></i>Search ClassMaps -->
-      </button>
+    <div style="float:left;">
+      <input type="submit" style="display:block">
+      </input>
     </div>
   </form>
 
