--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -423,11 +423,11 @@ function convertBool(b) {
    <div style="width:25px; float:left; margin-right: 5px;" onclick="clearForm();dateCheck();">
     <input type="text" style="color: white; cursor: pointer; font-size:15px;" placeholder="&times;" readonly>
    </div>
-
+<!-- 
     <div style="float:left;">
-      <input type="submit" style="display:block">
+      <input type="submit" style="display:none">
       </input>
-    </div>
+    </div> -->
   </form>
 
   <div style="float: right; padding-right: 10px; position: fixed; top: 10px; right: 0;">
