change to match other buttons

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -232,7 +232,7 @@
       background: none;
     }
     .listText:hover {
-      color: orange;
+      color: #00CED1;
     }
     .listTitle {
       color: white;
