try a different color scheme

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -77,6 +77,9 @@
       font-size: 12px;
       padding: 3px;
     }
+    .btn-remove:hover{
+      background: #8B0000;
+    }
     .btn-success{
       font-size: 12px;
       padding: 3px;
@@ -232,7 +235,7 @@
       background: none;
     }
     .listText:hover {
-      color: #00CED1;
+      color: #D3D3D3;
     }
     .listTitle {
       color: white;
