adjust remove buttons more

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -78,7 +78,8 @@
       padding: 3px;
     }
     .btn-remove:hover{
-      background: #8B0000;
+      background: #DC0404;
+      color: white;
     }
     .btn-success{
       font-size: 12px;
