--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -78,7 +78,7 @@
       padding: 3px;
     }
     .btn-remove:hover{
-      background: #DC0404;
+      background: #9B0606;
       color: white;
     }
     .btn-success{
