--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -424,8 +424,8 @@ function convertBool(b) {
       </div>
     </div>
 
-   <div style="width:25px; float:left; margin-right: 5px;" onclick="clearForm();dateCheck();">
-    <input type="text" style="color: white; cursor: pointer; font-size:15px;" placeholder="&times;" readonly>
+   <div style="width:20px; float:left;" onclick="clearForm();dateCheck();">
+      <input type="text" style="color: white; cursor: pointer; font-size:20px;" placeholder="&times;" readonly>
    </div>
 <!-- 
     <div style="float:left;">
