diff hover color

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -114,7 +114,7 @@
     }
     /* Change the background color of the dropdown button when the dropdown content is shown */
     .dropdown:hover .dropbtn {
-        background-color: #3e8e41;
+        background-color: #C30909;
     }
     ::placeholder {
       color: #d3d3d3;
