--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -1016,7 +1016,7 @@ function resetHighlight(e) {
           layer.bindTooltip(name+"<br>Students here: "+totalEnroll+"<br>Courses here: "+
                             totalCourse+"<br>");
           var buttontext =
-             '<button class="btn btn-success" id="build" value="'+name+'" onclick="searchBuilding(\''+name+'\')"><i class="fa fa-search></i>Classes Here</button>'
+             '<button class="btn btn-success" id="build" value="'+name+'" onclick="searchBuilding(\''+name+'\')"><i class="fa fa-search"></i>Classes Here</button>'
 
           layer.bindPopup(name+"<br>Students here: "+totalEnroll+"<br>Courses here: "+totalCourse+"<br>"+buttontext);
         }
