--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -768,33 +768,28 @@ toggle between hiding and showing the dropdown content */
        iconAnchor:   [18, 18], // point of the icon which will correspond to marker's location
        popupAnchor:  [0, -18] // point from which the popup should open relative to the iconAnchor
      });
-    for (var i = 0; i < printerLocs.length; i++) {
-  //if (hi[i][3] == '6' || hi[i][3] == '29')
-    if (printerLocs[i][3] == '6') L.marker([printerLocs[i][0], printerLocs[i][1]], {title: printerLocs[i][2], icon: printerIcon}).bindPopup(printerLocs[i][2]).addTo(printers);
-    if (printerLocs[i][3] == '29') L.marker([printerLocs[i][0], printerLocs[i][1]], {title: printerLocs[i][2], icon: printerIcon}).bindPopup(printerLocs[i][2]).addTo(printers);
-    if (printerLocs[i][3] == '28') L.marker([printerLocs[i][0], printerLocs[i][1]], {title: printerLocs[i][2], icon: printerIcon}).bindPopup(printerLocs[i][2]).addTo(printers);
+
+  for (var i = 0; i < printerLocs.length; i++) {
+    L.marker([printerLocs[i][0], printerLocs[i][1]], {title: printerLocs[i][2], icon: printerIcon}).bindPopup(printerLocs[i][2]).addTo(printers);
  }
+
  for (var i = 0; i < laundryLocs.length; i++) {
-  //if (hi[i][3] == '6' || hi[i][3] == '29')
     L.marker([laundryLocs[i][0], laundryLocs[i][1]], {title: laundryLocs[i][2], icon: laundryIcon}).bindPopup(laundryLocs[i][2]).addTo(laundry);
  }
+
  for (var i = 0; i < hotspotLocs.length; i++) {
-  //if (hi[i][3] == '6' || hi[i][3] == '29')
     L.marker([hotspotLocs[i][0], hotspotLocs[i][1]], {title: hotspotLocs[i][2], icon: hotspotIcon}).bindPopup(hotspotLocs[i][2]).addTo(hotspots);
  }
 
  for (var i = 0; i < waterLocs.length; i++) {
-  //if (hi[i][3] == '6' || hi[i][3] == '29')
     L.marker([waterLocs[i][0], waterLocs[i][1]], {title: waterLocs[i][2], icon: waterIcon}).bindPopup(waterLocs[i][2]).addTo(waterspots);
  }
 
  for (var i = 0; i < kitchens.length; i++) {
-  //if (hi[i][3] == '6' || hi[i][3] == '29')
     L.marker([kitchens[i][0], kitchens[i][1]], {title: kitchens[i][2], icon: kitchenIcon}).bindPopup(kitchens[i][2]).addTo(kitchenspots);
  }
 
   for (var i = 0; i < dining.length; i++) {
-  //if (hi[i][3] == '6' || hi[i][3] == '29')
     L.marker([dining[i][0], dining[i][1]], {title: dining[i][2], icon: diningIcon}).bindPopup(dining[i][2]).addTo(diningspots);
  }
 
