--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -115,7 +115,7 @@
             <ul class="timeline">
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="{% static 'classes/img/about/week1.jpg' %}" alt="">
+                  <img class="rounded-circle img-fluid" src="{% static 'classes/img/about/1.jpg' %}" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
