--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -742,40 +742,38 @@ $('.clockpicker').clockpicker({
        popupAnchor:  [0, -18] // point from which the popup should open relative to the iconAnchor
      });
 
+// Put the locations for each resource to its corresponding layer
   for (var i = 0; i < printerLocs.length; i++) {
     L.marker([printerLocs[i][0], printerLocs[i][1]], {title: printerLocs[i][2], icon: printerIcon}).bindPopup(printerLocs[i][2]).addTo(printers);
  }
-
  for (var i = 0; i < laundryLocs.length; i++) {
     L.marker([laundryLocs[i][0], laundryLocs[i][1]], {title: laundryLocs[i][2], icon: laundryIcon}).bindPopup(laundryLocs[i][2]).addTo(laundry);
  }
-
  for (var i = 0; i < hotspotLocs.length; i++) {
     L.marker([hotspotLocs[i][0], hotspotLocs[i][1]], {title: hotspotLocs[i][2], icon: hotspotIcon}).bindPopup(hotspotLocs[i][2]).addTo(hotspots);
  }
-
  for (var i = 0; i < waterLocs.length; i++) {
     L.marker([waterLocs[i][0], waterLocs[i][1]], {title: waterLocs[i][2], icon: waterIcon}).bindPopup(waterLocs[i][2]).addTo(waterspots);
  }
-
  for (var i = 0; i < kitchens.length; i++) {
     L.marker([kitchens[i][0], kitchens[i][1]], {title: kitchens[i][2], icon: kitchenIcon}).bindPopup(kitchens[i][2]).addTo(kitchenspots);
  }
-
   for (var i = 0; i < dining.length; i++) {
     L.marker([dining[i][0], dining[i][1]], {title: dining[i][2], icon: diningIcon}).bindPopup(dining[i][2]).addTo(diningspots);
  }
 
-    // URLS of maps for different layers (note: need to add attributes)
+    // URLs of different map layers and their attributions
     var mbAttr = 'Map data &copy; <a href="https://openstreetmap.org">OpenStreetMap</a> contributors, ' +
       '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
       'Imagery © <a href="https://mapbox.com">Mapbox</a>',
     mbUrl = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
     mbUrl2 = 'https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}';
-    // Different layers
+
+    // Different map layers
     var regular   = L.tileLayer(mbUrl, {id: 'mapbox.light', attribution: mbAttr}),
-    satellite  = L.tileLayer(mbUrl2, {id: 'mapbox.satellite',   attribution: mbAttr});
-    // Initializes the map
+    satellite  = L.tileLayer(mbUrl2, {id: 'mapbox.satellite', attribution: mbAttr});
+
+    // Initializes the map with default layers
     var map = L.map('map', {
       center: [40.346825, -74.656595],
       zoom: 16,
@@ -783,14 +781,17 @@ $('.clockpicker').clockpicker({
       zoomControl: true
     });
 
-var southWest = L.latLng(40.323212, -74.718103), //40.32, -74.67),
-northEast = L.latLng(40.368481, -74.596444) //40.356, -74.6);
+// Provides bounds and limits the user to only within those coordinates
+var southWest = L.latLng(40.323212, -74.718103),
+northEast = L.latLng(40.368481, -74.596444);
 var bounds = L.latLngBounds(southWest, northEast);
 
 map.setMaxBounds(bounds);
 map.on('drag', function() {
   map.panInsideBounds(bounds, { animate: false });
 });
+
+// Gives Jerry the Julius Caesar Salad Building
 var temp = "{{netid}}";
 if(temp === "jywei"){
 L.marker([40.349152, -74.655383], {icon: saladIcon}).addTo(map)
