--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -16,7 +16,7 @@
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
 <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
-
+  <!-- overlay data files -->
   <script type="text/javascript" src="{% static 'classes/buildings.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/printers.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/laundry.js' %}"></script>
