--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -24,7 +24,7 @@
   <script type="text/javascript" src="{% static 'classes/water.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/kitchens.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/dining.js' %}"></script>
-
+  <!-- bootstrap for timepicker -->
   <script type="text/javascript" src="{% static 'classes/assets/js/jquery.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/assets/js/bootstrap.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/dist/bootstrap-clockpicker.js' %}"></script>
@@ -34,24 +34,11 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js" type="text/javascript"></script>
 
-
-
 <head bgcolor="#000000">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118677193-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-118677193-1');
-</script>
-
   <title>ClassMaps</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-
+  <!-- css section -->
   <style>
       html, body {
        height: 100%;
@@ -144,7 +131,7 @@
       padding-right: 5px;
       padding-left: 5px;
     }
-    /* Start help overlay css */
+    /* help overlay css */
     .helpOverlay {
       position: fixed;
       display: none;
@@ -161,7 +148,7 @@
       text-align: center;
       padding-top: 60px;
     }
-    /* Start sidebar css */
+    /* sidebar css */
     .sideOverlay {
       position: fixed;
       display: none;
@@ -216,12 +203,6 @@
       z-index: 1;
       cursor: pointer;
     }
-    .btn-remove2{
-      float: right;
-      background-color: #f44336; /* red */
-      font-size: 12px;
-      padding: 3px;
-    }
     .listText {
       color: white;
       font-size: 12px;
@@ -256,7 +237,8 @@
       font-size: 11px;
       z-index: 8;
     }
-    @media only screen and (max-width: 600px) {
+    /* adjust autocomplete width on mobile */
+    @media only screen and (max-width: 600px) { 
       .ui-autocomplete {
         width: 67%;
         height: auto;
@@ -298,6 +280,7 @@
       display: inline-block;
       float: none;
     }
+    /* results for cards */
     .card {
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       transition: 0.3s;
@@ -322,15 +305,8 @@
   </style>
 </head>
 
-<!-- Autocomplete js -->
 <script>
-//   function selectClass(){
-//   window.location.href = 'https://classmaps.herokuapp.com/courses/{{c.pk}}';
-// }
-// function selectBuilding(){
-//   window.location.href = 'https://classmaps.herokuapp.com/buildings/{{b}}';
-// }
-
+// Autocomplete javascript 
 $(function() {
   $("#search").autocomplete({
     minLength: 3,
@@ -363,11 +339,9 @@ $(function() {
 
 // Convert to match main query format
 function convertBool(b) {
-  if (b) {
+  if (b)
     return b;
-  }
   return null;
-}
 </script>
 
   <div id="map"></div>
