--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -280,7 +280,7 @@
       display: inline-block;
       float: none;
     }
-    /* results for cards */
+    
     .card {
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       transition: 0.3s;
@@ -305,8 +305,15 @@
   </style>
 </head>
 
+<!-- Autocomplete js -->
 <script>
-// Autocomplete javascript 
+//   function selectClass(){
+//   window.location.href = 'https://classmaps.herokuapp.com/courses/{{c.pk}}';
+// }
+// function selectBuilding(){
+//   window.location.href = 'https://classmaps.herokuapp.com/buildings/{{b}}';
+// }
+
 $(function() {
   $("#search").autocomplete({
     minLength: 3,
@@ -339,9 +346,11 @@ $(function() {
 
 // Convert to match main query format
 function convertBool(b) {
-  if (b)
+  if (b) {
     return b;
+  }
   return null;
+}
 </script>
 
   <div id="map"></div>
